[gd_scene load_steps=32 format=2]

[ext_resource path="res://imagens/bloco-gantt02.png" type="Texture" id=1]
[ext_resource path="res://tileset/industrial.tres" type="TileSet" id=2]
[ext_resource path="res://Script/MapaFase5.gd" type="Script" id=3]
[ext_resource path="res://imagens/bloco-gantt.png" type="Texture" id=4]
[ext_resource path="res://Cenas/Cenario/PlataformaMovelVertical.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Personagens/TimeTrap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/Cenario/ParallaxBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/Personagens/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cenas/Personagens/Monstro.tscn" type="PackedScene" id=9]
[ext_resource path="res://imagens/pomodoro-bloco_resample.png" type="Texture" id=10]
[ext_resource path="res://imagens/pomodoro-bloco_resample02.png" type="Texture" id=11]
[ext_resource path="res://imagens/kanban/asdfasdf.png" type="Texture" id=12]
[ext_resource path="res://imagens/Ponte Bait.png" type="Texture" id=13]
[ext_resource path="res://imagens/kanban/pixil-frame-0 (16).png" type="Texture" id=14]
[ext_resource path="res://imagens/Bait Fraco.png" type="Texture" id=15]
[ext_resource path="res://imagens/Portal/pixil-frame-1.png" type="Texture" id=16]
[ext_resource path="res://imagens/Portal/pixil-frame-3.png" type="Texture" id=17]
[ext_resource path="res://imagens/Portal/pixil-frame-2.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 66.0
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "new",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41, 40.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41, 5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "new",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 41, 39.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 35.5, 5.5 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "new",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 26, 0.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 41, 37 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 144.5, 110 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 80, 78 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." groups=["player"] instance=ExtResource( 8 )]
position = Vector2( 109, 378 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, 0 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( 393256, 6, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 1, 0, 393262, 1, 0, 393263, 1, 0, 393264, 2, 0, 458792, 7, 0, 458793, 7, 0, 458794, 7, 0, 458795, 7, 0, 458796, 7, 0, 458797, 7, 0, 458798, 7, 0, 458799, 7, 0, 458800, 7, 0, 524328, 7, 0, 524329, 7, 0, 524330, 7, 0, 524331, 7, 0, 524332, 7, 0, 524333, 7, 0, 524334, 7, 0, 524335, 7, 0, 524336, 7, 0, 655447, 6, 0, 655448, 1, 0, 655449, 1, 0, 655450, 1, 0, 655451, 2, 0, 655462, 6, 0, 655463, 1, 0, 655464, 1, 0, 655465, 1, 0, 655466, 2, 0, 720980, 4, 0, 720983, 7, 0, 720984, 7, 0, 720985, 7, 0, 720986, 7, 0, 720987, 7, 0, 786513, 4, 0, 786519, 7, 0, 786520, 7, 0, 786521, 7, 0, 786522, 7, 0, 786523, 7, 0, 786561, 4, 0, 786562, 4, 0, 917503, 6, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 2, 0, 852046, 4, 0, 852055, 7, 0, 852056, 7, 0, 852057, 7, 0, 852058, 7, 0, 852059, 7, 0, 852095, 4, 0, 852096, 4, 0, 852097, 3, 0, 852098, 3, 0, 983039, 7, 0, 917504, 7, 0, 917505, 7, 0, 917506, 7, 0, 917507, 7, 0, 917508, 7, 0, 917509, 7, 0, 917510, 7, 0, 917511, 7, 0, 917512, 7, 0, 917579, 4, 0, 917591, 7, 0, 917592, 7, 0, 917593, 7, 0, 917594, 7, 0, 917595, 7, 0, 917629, 4, 0, 917630, 4, 0, 917631, 3, 0, 917632, 3, 0, 917633, 3, 0, 917634, 3, 0, 1048575, 7, 0, 983040, 7, 0, 983041, 7, 0, 983042, 7, 0, 983043, 7, 0, 983044, 7, 0, 983045, 7, 0, 983046, 7, 0, 983047, 7, 0, 983048, 7, 0, 983112, 4, 0, 983127, 7, 0, 983128, 7, 0, 983129, 7, 0, 983130, 7, 0, 983131, 7, 0, 983163, 4, 0, 983164, 4, 0, 983165, 3, 0, 983166, 3, 0, 983167, 3, 0, 983168, 3, 0, 983169, 3, 0, 983170, 3, 0, 1114111, 7, 0, 1048576, 7, 0, 1048577, 7, 0, 1048578, 7, 0, 1048579, 7, 0, 1048580, 7, 0, 1048581, 7, 0, 1048582, 7, 0, 1048583, 7, 0, 1048584, 7, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048616, 7, 0, 1048617, 7, 0, 1048618, 7, 0, 1048619, 7, 0, 1048620, 7, 0, 1048621, 7, 0, 1048622, 7, 0, 1048623, 7, 0, 1048624, 7, 0, 1048631, 6, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 1, 0, 1048635, 1, 0, 1048636, 1, 0, 1048637, 1, 0, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 1, 0, 1048642, 1, 0, 1048643, 1, 0, 1048644, 1, 0, 1048645, 2, 0, 1048663, 7, 0, 1048664, 7, 0, 1048665, 7, 0, 1048666, 7, 0, 1048667, 7, 0, 1048668, 1, 0, 1048669, 1, 0, 1048670, 1, 0, 1048671, 1, 0, 1048672, 1, 0, 1048673, 1, 0, 1048674, 1, 0, 1048675, 1, 0, 1048676, 1, 0, 1048677, 1, 0, 1048678, 7, 0, 1048679, 7, 0, 1048680, 7, 0, 1048681, 7, 0, 1048682, 7, 0, 1048697, 4, 0, 1048698, 4, 0, 1048699, 3, 0, 1048700, 3, 0, 1048701, 3, 0, 1048702, 3, 0, 1048703, 3, 0, 1048704, 3, 0, 1048705, 3, 0, 1048706, 3, 0, 1179647, 7, 0, 1114112, 7, 0, 1114113, 7, 0, 1114114, 7, 0, 1114115, 7, 0, 1114116, 7, 0, 1114117, 7, 0, 1114118, 7, 0, 1114119, 7, 0, 1114120, 7, 0, 1114152, 7, 0, 1114153, 7, 0, 1114154, 7, 0, 1114155, 7, 0, 1114156, 7, 0, 1114157, 7, 0, 1114158, 7, 0, 1114159, 7, 0, 1114160, 7, 0, 1114167, 7, 0, 1114168, 7, 0, 1114169, 7, 0, 1114170, 7, 0, 1114171, 7, 0, 1114172, 7, 0, 1114173, 7, 0, 1114174, 7, 0, 1114175, 7, 0, 1114176, 7, 0, 1114177, 7, 0, 1114178, 7, 0, 1114179, 7, 0, 1114180, 7, 0, 1114181, 7, 0, 1114199, 7, 0, 1114200, 7, 0, 1114201, 7, 0, 1114202, 7, 0, 1114203, 7, 0, 1114214, 7, 0, 1114215, 7, 0, 1114216, 7, 0, 1114217, 7, 0, 1114218, 7, 0, 1114231, 4, 0, 1114232, 4, 0, 1114233, 3, 0, 1114234, 3, 0, 1114235, 3, 0, 1114236, 3, 0, 1114237, 3, 0, 1114238, 3, 0, 1114239, 3, 0, 1114240, 3, 0, 1114241, 3, 0, 1114242, 3, 0, 1245183, 7, 0, 1179648, 7, 0, 1179649, 7, 0, 1179650, 7, 0, 1179651, 7, 0, 1179652, 7, 0, 1179653, 7, 0, 1179654, 7, 0, 1179655, 7, 0, 1179656, 7, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179688, 7, 0, 1179689, 7, 0, 1179690, 7, 0, 1179691, 7, 0, 1179692, 7, 0, 1179693, 7, 0, 1179694, 7, 0, 1179695, 7, 0, 1179696, 7, 0, 1179703, 7, 0, 1179704, 7, 0, 1179705, 7, 0, 1179706, 7, 0, 1179707, 7, 0, 1179708, 7, 0, 1179709, 7, 0, 1179710, 7, 0, 1179711, 7, 0, 1179712, 7, 0, 1179713, 7, 0, 1179714, 7, 0, 1179715, 7, 0, 1179716, 7, 0, 1179717, 7, 0, 1179735, 7, 0, 1179736, 7, 0, 1179737, 7, 0, 1179738, 7, 0, 1179739, 7, 0, 1179750, 7, 0, 1179751, 7, 0, 1179752, 7, 0, 1179753, 7, 0, 1179754, 7, 0, 1179765, 4, 0, 1179766, 4, 0, 1179767, 3, 0, 1179768, 3, 0, 1179769, 3, 0, 1179770, 3, 0, 1179771, 3, 0, 1179772, 3, 0, 1179773, 3, 0, 1179774, 3, 0, 1179775, 3, 0, 1179776, 3, 0, 1179777, 3, 0, 1179778, 3, 0, 1310719, 7, 0, 1245184, 7, 0, 1245185, 7, 0, 1245186, 7, 0, 1245187, 7, 0, 1245188, 7, 0, 1245189, 7, 0, 1245190, 7, 0, 1245191, 7, 0, 1245192, 7, 0, 1245224, 7, 0, 1245225, 7, 0, 1245226, 7, 0, 1245227, 7, 0, 1245228, 7, 0, 1245229, 7, 0, 1245230, 7, 0, 1245231, 7, 0, 1245232, 7, 0, 1245239, 7, 0, 1245240, 7, 0, 1245241, 7, 0, 1245242, 7, 0, 1245243, 7, 0, 1245244, 7, 0, 1245245, 7, 0, 1245246, 7, 0, 1245247, 7, 0, 1245248, 7, 0, 1245249, 7, 0, 1245250, 7, 0, 1245251, 7, 0, 1245252, 7, 0, 1245253, 7, 0, 1245271, 7, 0, 1245272, 7, 0, 1245273, 7, 0, 1245274, 7, 0, 1245275, 7, 0, 1245286, 7, 0, 1245287, 7, 0, 1245288, 7, 0, 1245289, 7, 0, 1245290, 7, 0, 1245299, 4, 0, 1245300, 4, 0, 1245301, 3, 0, 1245302, 3, 0, 1245303, 3, 0, 1245304, 3, 0, 1245305, 3, 0, 1245306, 3, 0, 1245307, 3, 0, 1245308, 3, 0, 1245309, 3, 0, 1245310, 3, 0, 1245311, 3, 0, 1245312, 3, 0, 1245313, 3, 0, 1245314, 3, 0, 1376255, 7, 0, 1310720, 7, 0, 1310721, 7, 0, 1310722, 7, 0, 1310723, 7, 0, 1310724, 7, 0, 1310725, 7, 0, 1310726, 7, 0, 1310727, 7, 0, 1310728, 7, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310760, 7, 0, 1310761, 7, 0, 1310762, 7, 0, 1310763, 7, 0, 1310764, 7, 0, 1310765, 7, 0, 1310766, 7, 0, 1310767, 7, 0, 1310768, 7, 0, 1310775, 7, 0, 1310776, 7, 0, 1310777, 7, 0, 1310778, 7, 0, 1310779, 7, 0, 1310780, 7, 0, 1310781, 7, 0, 1310782, 7, 0, 1310783, 7, 0, 1310784, 7, 0, 1310785, 7, 0, 1310786, 7, 0, 1310787, 7, 0, 1310788, 7, 0, 1310789, 7, 0, 1310807, 7, 0, 1310808, 7, 0, 1310809, 7, 0, 1310810, 7, 0, 1310811, 7, 0, 1310822, 7, 0, 1310823, 7, 0, 1310824, 7, 0, 1310825, 7, 0, 1310826, 7, 0, 1310827, 1, 0, 1310828, 1, 0, 1310829, 1, 0, 1310830, 1, 0, 1310831, 1, 0, 1310832, 1, 0, 1310833, 1, 0, 1310834, 1, 0, 1310835, 3, 0, 1310836, 3, 0, 1310837, 3, 0, 1310838, 3, 0, 1310839, 3, 0, 1310840, 3, 0, 1310841, 3, 0, 1310842, 3, 0, 1310843, 3, 0, 1310844, 3, 0, 1310845, 3, 0, 1310846, 3, 0, 1310847, 3, 0, 1310848, 3, 0, 1310849, 3, 0, 1310850, 3, 0, 1441791, 7, 0, 1376256, 7, 0, 1376257, 7, 0, 1376258, 7, 0, 1376259, 7, 0, 1376260, 7, 0, 1376261, 7, 0, 1376262, 7, 0, 1376263, 7, 0, 1376264, 7, 0, 1376265, 7, 0, 1376266, 7, 0, 1376267, 7, 0, 1376268, 7, 0, 1376269, 7, 0, 1376270, 7, 0, 1376271, 7, 0, 1376272, 7, 0, 1376273, 7, 0, 1376274, 7, 0, 1376275, 7, 0, 1376276, 7, 0, 1376277, 7, 0, 1376278, 7, 0, 1376279, 7, 0, 1376296, 7, 0, 1376297, 7, 0, 1376298, 7, 0, 1376299, 7, 0, 1376300, 7, 0, 1376301, 7, 0, 1376302, 7, 0, 1376303, 7, 0, 1376304, 7, 0, 1376311, 7, 0, 1376312, 7, 0, 1376313, 7, 0, 1376314, 7, 0, 1376315, 7, 0, 1376316, 7, 0, 1376317, 7, 0, 1376318, 7, 0, 1376319, 7, 0, 1376320, 7, 0, 1376321, 7, 0, 1376322, 7, 0, 1376323, 7, 0, 1376324, 7, 0, 1376325, 7, 0, 1376343, 7, 0, 1376344, 7, 0, 1376345, 7, 0, 1376346, 7, 0, 1376347, 7, 0, 1376358, 7, 0, 1376359, 7, 0, 1376360, 7, 0, 1376361, 7, 0, 1376362, 7, 0 )

[node name="PlataformaMovel" parent="." instance=ExtResource( 5 )]
position = Vector2( 1163, 437 )

[node name="Area2DPortal" type="Area2D" parent="."]
position = Vector2( 4426, 550 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2DPortal"]
position = Vector2( 5, 8 )
scale = Vector2( 3.275, 3.275 )
frames = SubResource( 13 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPortal"]
shape = SubResource( 1 )

[node name="Monstro10" parent="." instance=ExtResource( 6 )]
position = Vector2( 3148, 481 )

[node name="Monstro9" parent="." instance=ExtResource( 6 )]
position = Vector2( 2981, 480 )

[node name="Monstro" parent="." instance=ExtResource( 9 )]
position = Vector2( 457, 607 )

[node name="Monstro2" parent="." instance=ExtResource( 9 )]
position = Vector2( 3484, 608 )

[node name="Monstro4" parent="." instance=ExtResource( 9 )]
position = Vector2( 3606, 607 )

[node name="GUT" type="KinematicBody2D" parent="."]
position = Vector2( 25, 169 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="GUT"]
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GUT"]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="GUT"]
position = Vector2( 0, 41 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GUT/Area2D"]
shape = SubResource( 4 )

[node name="Kanban" type="KinematicBody2D" parent="."]
position = Vector2( 225, 170 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Kanban"]
position = Vector2( 0, 1 )
scale = Vector2( 0.0413306, 0.0398185 )
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kanban"]
position = Vector2( 0, 1 )
shape = SubResource( 6 )

[node name="Area2D2" type="Area2D" parent="Kanban"]
position = Vector2( -1, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kanban/Area2D2"]
position = Vector2( 1, 36 )
shape = SubResource( 7 )

[node name="Bloco_Tomate" type="KinematicBody2D" parent="."]
position = Vector2( 123, 171 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bloco_Tomate"]
position = Vector2( 0.624878, -0.125164 )
scale = Vector2( 0.105932, 0.107752 )
frames = SubResource( 8 )
playing = true

[node name="Area2D3" type="Area2D" parent="Bloco_Tomate"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bloco_Tomate/Area2D3"]
position = Vector2( 0.624924, 36.8748 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bloco_Tomate"]
position = Vector2( 0.624924, -0.125168 )
shape = SubResource( 10 )

[node name="Monstro3" parent="." instance=ExtResource( 6 )]
position = Vector2( 2868, 288 )

[node name="Monstro5" parent="." instance=ExtResource( 6 )]
position = Vector2( 833, 545 )

[node name="Monstro6" parent="." instance=ExtResource( 9 )]
position = Vector2( 1039, 480 )

[node name="Monstro7" parent="." instance=ExtResource( 9 )]
position = Vector2( 1908, 483 )

[node name="Monstro8" parent="." instance=ExtResource( 9 )]
position = Vector2( 2099, 483 )

[node name="IndustrialBait" type="Sprite" parent="."]
position = Vector2( 1425, 400 )
texture = ExtResource( 13 )

[node name="Area2DBait" type="Area2D" parent="IndustrialBait"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IndustrialBait/Area2DBait"]
position = Vector2( 0.5, 0 )
shape = SubResource( 11 )

[node name="BaitFraco" type="Sprite" parent="."]
position = Vector2( 3345, 432 )
texture = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="BaitFraco"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaitFraco/Area2D"]
shape = SubResource( 12 )

[connection signal="body_entered" from="Area2DPortal" to="." method="_on_Area2DPortal_body_entered"]
[connection signal="body_entered" from="GUT/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Kanban/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Bloco_Tomate/Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="IndustrialBait/Area2DBait" to="." method="_on_Area2DBait_body_entered"]
[connection signal="body_exited" from="IndustrialBait/Area2DBait" to="." method="_on_Area2DBait_body_exited"]
[connection signal="body_entered" from="BaitFraco/Area2D" to="." method="_on_Area2DBaitado_body_entered"]
[connection signal="body_exited" from="BaitFraco/Area2D" to="." method="_on_Area2DBaitado_body_exited"]
